# mydutch

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  docker-compose.yml  package.json
.github/workflows/: backend-tests.yml  deploy.yml  frontend-tests.yml
backend/: .env.example  Dockerfile  Dockerfile.dev  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema_users_and_tokens.py
backend/app/: __init__.py  ai.py  auth.py  config.py  database.py  dependencies.py  main.py  models.py  r2.py  schemas.py
backend/app/routers/: auth.py  chat.py  content.py
backend/tests/: __init__.py  test_main.py
docs/: DEVELOPMENT.md
frontend/: .env.example  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: FillInBlankQuiz.jsx  GrammarView.jsx  HomePage.jsx  Login.jsx  Profile.jsx  ProgressTracker.jsx  ProtectedRoute.jsx  Quiz.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/data/: vocabulary.js  vocabularyA2Extended.js
frontend/src/services/: api.js
frontend/src/utils/: audio.js  progress.js
scripts/: migrate_to_r2.py
src/: App.jsx  index.css
src/components/: CategoryView.jsx  ConversationPartner.jsx  Flashcard.jsx  ListeningQuiz.jsx  ProgressTracker.jsx  Quiz.jsx
src/data/: grammar.js  vocabulary.js
